# handlers/user_auth_handler.go
@@ -5,8 +5,14 @@ import (
 	log "github.com/sirupsen/logrus"
 )
 
-// UserRegistrationHandler ...
-func UserRegistrationHandler(c *gin.Context) {
+// ClinicRegistrationHandler ...
+func ClinicRegistrationHandler(c *gin.Context) {
+	log.Infof("Registering Signed Up User to SD database")
+
+}
+
+// ClinicVerificationHandler ...
+func ClinicVerificationHandler(c *gin.Context) {
 	log.Infof("Registering Signed Up User to SD database")
 
 }
